events: Add Fall 2025 FreeBSD Summit

--- a/website/data/en/events/events2025.toml
+++ b/website/data/en/events/events2025.toml
@@ -47,3 +47,14 @@ country = "Croatia"
 city = "Zagreb"
 site = "TBA"
 description = "EuroBSDcon is the European annual technical conference gathering users and developers working on and with 4.4BSD (Berkeley Software Distribution) based operating systems family and related projects."
+
+[[events]]
+id = "freebsd-summit-2025"
+name = "Fall 2025 FreeBSD Summit"
+url = "https://freebsdfoundation.org/news-and-events/event-calendar/fall-2025-freebsd-summit/"
+startDate = "2025-11-06"
+endDate = "2025-11-07"
+country = "United States"
+city = "San Jose, CA"
+site = "NetApp Campus"
+description = "The FreeBSD Summit is an event held annually to bring the FreeBSD community together to learn, network, and drive FreeBSD use. Each year the event gathers FreeBSD users including: decision makers, software engineers, and individual contributors and users, to share best practices and successes in their use of FreeBSD. The FreeBSD Summit also provides the unique opportunity to discuss issues with the developer community in-person."
