events: Add OpenZFS Developers Summit 2025

--- a/website/data/en/events/events2025.toml
+++ b/website/data/en/events/events2025.toml
@@ -49,6 +49,18 @@ site = "TBA"
 description = "EuroBSDcon is the European annual technical conference gathering users and developers working on and with 4.4BSD (Berkeley Software Distribution) based operating systems family and related projects."
 
 [[events]]
+id = "openzfs-2025"
+name = "OpenZFS Developers Summit 2025"
+url = "https://openzfs.org/wiki/OpenZFS_Developer_Summit_2025"
+startDate = "2025-10-25"
+endDate = "2025-10-28"
+countryCode = "US"
+country = "United States"
+city = "Portland, OR"
+site = "Hillsdale neighborhood"
+description = "The goal of the event is to foster cross-community discussions of OpenZFS work and to make progress on some of the projects we have proposed. This 4-day event consisted of 2-day of User Summit, 1-day of Developer Summit, and a 1-day Developer Summit Hackathon."
+
+[[events]]
 id = "freebsd-summit-2025"
 name = "Fall 2025 FreeBSD Summit"
 url = "https://freebsdfoundation.org/news-and-events/event-calendar/fall-2025-freebsd-summit/"
