events: update EuroBSDCon 2025 site
Obtained from:	https://2025.eurobsdcon.org/venue.html

--- a/website/data/en/events/events2025.toml
+++ b/website/data/en/events/events2025.toml
@@ -45,7 +45,7 @@ endDate = "2025-09-28"
 countryCode = "HR"
 country = "Croatia"
 city = "Zagreb"
-site = "TBA"
+site = "Faculty of Electrical Engineering and Computing (FER)"
 description = "EuroBSDcon is the European annual technical conference gathering users and developers working on and with 4.4BSD (Berkeley Software Distribution) based operating systems family and related projects."
 
 [[events]]
