--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date= "2025-08-29"
+title = "April-June 2025 Status Report"
+description = "The <a href=\"https://www.freebsd.org/status/report-2025-04-2025-06/\">April to June Status Report</a> is now available with 32 entries."
+
+[[news]]
 date = "2025-07-15"
 description = "New committer: <a href=\"mailto:obiwac@FreeBSD.org\">Aymeric Wibo</a> (src)"
 
