--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-09-14"
+title = "FreeBSD 15.0-ALPHA2 Available"
+description = "The second ALPHA build for the FreeBSD 15.0 release cycle is now available. ISO images for the amd64, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-September/003182.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
+
+[[news]]
 date = "2025-09-07"
 title = "FreeBSD 15.0-ALPHA1 Available"
 description = "The first ALPHA build for the FreeBSD 15.0 release cycle is now available. ISO images for the amd64, powerpc64le, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-September/003112.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
