Add EN-25:15 through EN-25:17.
Approved by:	so

--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,18 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-25:17.bnxt"
+date = "2025-09-16"
+
+[[notices]]
+name = "FreeBSD-EN-25:16.vfs"
+date = "2025-09-16"
+
+[[notices]]
+name = "FreeBSD-EN-25:15.arm64"
+date = "2025-09-16"
+
+[[notices]]
 name = "FreeBSD-EN-25:14.route"
 date = "2025-08-08"
 
