new committer (src): Jaeyoon Choi (jaeyoon)
Complete steps 1-4 for new committers from the committer's guide:

1. Add myself to doc/shared/authors.adoc
2. Add myself to doc/shared/contrib-committers.adoc
3. Add a news entry
4. Add my PGP key

Reviewed By:	imp (mentor)
Approved by:	imp (mentor)
Differential Revision: https://reviews.freebsd.org/D52569

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -7,6 +7,10 @@ description = "The second ALPHA build for the FreeBSD 15.0 release cycle is now 
 
 [[news]]
 date = "2025-09-09"
+description = "New committer: <a href=\"mailto:jaeyoon@FreeBSD.org\">Jaeyoon Choi</a> (src)"
+
+[[news]]
+date = "2025-09-09"
 description = "New committer: <a href=\"mailto:vladlen@FreeBSD.org\">Vladlen Popolitov</a> (doc/ru)"
 
 [[news]]
