press: Add recent Foundation articles
Reviewed by:	bcr, jrm
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D52603

--- a/website/data/en/press/press.toml
+++ b/website/data/en/press/press.toml
@@ -1,5 +1,41 @@
 # Sort the entries by date
 [[press]]
+name = "FreeBSD Jails are Simple and Easy"
+url = "https://freebsdfoundation.org/blog/freebsd-jails-are-simple-and-easy/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-08-25"
+author = "FreeBSD Foundation"
+description = "Jails. The lightweight answer to containerisation"
+
+[[press]]
+name = "From Minecraft to Markets: Java Hiding in Plain Sight"
+url = "https://freebsdfoundation.org/blog/from-minecraft-to-markets-java-hiding-in-plain-sight/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-07-22"
+author = "FreeBSD Foundation"
+description = "Did you know Java was used here and here?"
+
+[[press]]
+name = "An Introduction to FreeBSD’s Periodic System"
+url = "https://freebsdfoundation.org/blog/an-introduction-to-freebsds-periodic-system/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-07-08"
+author = "FreeBSD Foundation"
+description = "The FreeBSD periodic utility is a built-in system to schedule and run regular maintenance jobs in the form of shell scripts"
+
+[[press]]
+name = "How To Install and Configure Galene Video Meeting Server"
+url = "https://freebsdfoundation.org/blog/how-to-install-and-configure-the-galene-video-meeting-server-on-freebsd/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-07-07"
+author = "FreeBSD Foundation"
+description = "https://freebsdfoundation.org/blog/how-to-install-and-configure-the-galene-video-meeting-server-on-freebsd/"
+
+[[press]]
 name = "FreeBSD Foundation Welcomes New Board Member: John Baldwin"
 url = "https://freebsdfoundation.org/blog/freebsd-foundation-welcomes-new-board-member-john-baldwin/"
 siteName = "FreeBSD Foundation Blog"
