--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,48 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date = "2025-05-24"
+title = "FreeBSD 14.3-BETA4 發布了"
+description = "FreeBSD 14.3 的第四個 BETA 版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-May/002853.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
+date= "2025-05-21"
+title = "2025 第一季開發進度報告發布"
+description = "<a href=\"https://www.freebsd.org/status/report-2025-01-2025-03/\">2024 第一季開發進度報告發布</a> 40則條目現已發布。"
+
+[[news]]
+date = "2025-05-16"
+title = "FreeBSD 14.3-BETA3 發布了"
+description = "FreeBSD 14.3 的第三個 BETA 版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-May/002832.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
+date = "2025-05-10"
+title = "FreeBSD 14.3-BETA2 發布了"
+description = "FreeBSD 14.3 的第二個 BETA 版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-May/002817.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
+date = "2025-05-07"
+description = "新任 committer: <a href=\"mailto:khorben@FreeBSD.org\">Pierre Pronchery</a> (src)"
+
+[[news]]
+date = "2025-05-02"
+title = "FreeBSD 14.3-BETA1 發布了"
+description = "FreeBSD 14.3 的第一個 BETA 版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-May/002810.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
+date = "2025-04-24"
+title = "FreeBSD 2025 社群調查"
+description = "<a href=\"https://www.surveymonkey.com/r/freebsdsurvey25\">FreeBSD 2025 社群問卷</a>現已公布。請踴躍與您的雇主、同事、朋友或任何 FreeBSD 社群同好分享調查網址。問卷將於 2025 年 5 月 7 日 22:00 UTC結束。"
+
+[[news]]
+date = "2025-04-18"
+description = "新任 committer: <a href=\"mailto:ivy@FreeBSD.org\">Lexi Winter</a> (src)"
+
+[[news]]
+date = "2025-04-07"
+description = "新任 committer: <a href=\"mailto:kgalazka@FreeBSD.org\">Krzysztof Galazka</a> (src)"
+
+[[news]]
 date = "2025-03-11"
 title = "FreeBSD 13.5-RELEASE 發布了"
 description = "<a href=\"https://www.FreeBSD.org/releases/13.5R/announce/\">FreeBSD 13.5-RELEASE</a>現已發布了。安裝前，請查看 <a href=\"https://www.FreeBSD.org/releases/13.5R/relnotes/\">發布通知</a>和 <a href=\"https://www.FreeBSD.org/releases/13.5R/errata/\">發行勘誤</a>以了解 13.5 的最新消息和問題。更多資訊可查看 <a href=\"https://www.FreeBSD.org/releases/\">發行版資訊</a>頁面。"
