press: Add link to 2025 survey results
Reviewed by:	bcr, jrm
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D52691

--- a/website/data/en/press/press.toml
+++ b/website/data/en/press/press.toml
@@ -1,5 +1,14 @@
 # Sort the entries by date
 [[press]]
+name = "Insights from the 2025 FreeBSD Community Survey"
+url = "https://freebsdfoundation.org/insights-from-the-2025-freebsd-community-survey/"
+siteName = "FreeBSD Foundation"
+siteUrl = "https://freebsdfoundation.org/"
+date = "2025-09-23"
+author = "FreeBSD Foundation"
+description = "Your feedback on how FreeBSD is being used today"
+
+[[press]]
 name = "FreeBSD Jails are Simple and Easy"
 url = "https://freebsdfoundation.org/blog/freebsd-jails-are-simple-and-easy/"
 siteName = "FreeBSD Foundation Blog"
