--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-09-27"
+title = "FreeBSD 15.0-ALPHA4 Available"
+description = "The fourth ALPHA build for the FreeBSD 15.0 release cycle is now available. ISO images for the amd64, armv7, aarch64, powerpc64, powerpc64le, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-September/003265.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
+
+[[news]]
 date = "2025-09-22"
 title = "FreeBSD 15.0-ALPHA3 Available"
 description = "The third ALPHA build for the FreeBSD 15.0 release cycle is now available. ISO images for the amd64, armv7, aarch64, powerpc64, and powerpc64le architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-September/003240.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
