traditional Chinese Translation of the latest news items (Sep 2025)

--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,38 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date = "2025-09-28"
+description = "新任 committer: <a href=\"mailto:tiga@FreeBSD.org\">Tiago Gasiba</a> (ports)"
+
+[[news]]
+date = "2025-09-27"
+title = "FreeBSD 15.0-ALPHA4 發布了"
+description = "FreeBSD 15.0 的第四個 ALPHA 版本現已發布。用於 amd64、armv7、aarch64、powerpc64、powerpc64le和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-September/003265.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
+date = "2025-09-22"
+title = "FreeBSD 15.0-ALPHA3 發布了"
+description = "FreeBSD 15.0 的第三個 ALPHA 版本現已發布。用於 amd64、armv7、aarch64、powerpc64、powerpc64le和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-September/003240.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
+date = "2025-09-14"
+title = "FreeBSD 15.0-ALPHA2 發布了"
+description = "FreeBSD 15.0 的第二個 ALPHA 版本現已發布。用於 amd64、armv7、aarch64、powerpc64、powerpc64le和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-September/003182.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
+date = "2025-09-09"
+description = "新任 committer: <a href=\"mailto:jaeyoon@FreeBSD.org\">Jaeyoon Choi</a> (src)"
+
+[[news]]
+date = "2025-09-09"
+description = "新任 committer: <a href=\"mailto:vladlen@FreeBSD.org\">Vladlen Popolitov</a> (doc/ru)"
+
+[[news]]
+date = "2025-09-07"
+title = "FreeBSD 15.0-ALPHA1 發布了"
+description = "FreeBSD 15.0 的第一個 ALPHA 版本現已發布。用於 amd64、armv7、aarch64、powerpc64、powerpc64le和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-September/003112.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
 date= "2025-08-29"
 title = "2025 第二季開發進度報告發布"
 description = "<a href=\"https://www.freebsd.org/status/report-2025-04-2025-06/\">2025 第一季開發進度報告發布</a> 32則條目現已發布。"
