Add EN-25:18 and SA-25:08.
Approved by:	so

--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-25:18.freebsd-update"
+date = "2025-09-30"
+
+[[notices]]
 name = "FreeBSD-EN-25:17.bnxt"
 date = "2025-09-16"
 
