traditional Chinese Translation of the latest news items (2025-10-18)

--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date = "2025-10-18"
+title = "FreeBSD 15.0-BETA2 發布了"
+description = "FreeBSD 15.0 的第二個 BETA 版本現已發布。用於 amd64、armv7、powerpc64、powerpc64le和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-October/003466.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
 date = "2025-10-12"
 title = "FreeBSD 15.0-BETA1 發布了"
 description = "FreeBSD 15.0 的第一個 BETA 版本現已發布。用於 amd64、armv7、powerpc64、powerpc64le和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-October/003383.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
