press: Add Foundation link to Vendor Summit
Reviewed by:	jrm
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D53471

--- a/website/data/en/press/press.toml
+++ b/website/data/en/press/press.toml
@@ -1,5 +1,14 @@
 # Sort the entries by date
 [[press]]
+name = "FreeBSD Vendor Summit, Nov 6-7"
+url = "https://freebsdfoundation.org/blog/freebsd-vendor-summit-happening-next-week-november-6-7-2025/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-10-28"
+author = "FreeBSD Foundation"
+description = "The 2025 FreeBSD Vendor Summit is taking place November 6–7 at NetApp Headquarters in San Jose, CA"
+
+[[press]]
 name = "Insights from the 2025 FreeBSD Community Survey"
 url = "https://freebsdfoundation.org/insights-from-the-2025-freebsd-community-survey/"
 siteName = "FreeBSD Foundation"
