--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-11-01"
+title = "FreeBSD 15.0-BETA4 Available"
+description = "The fourth BETA build for the FreeBSD 15.0 release cycle is now available. ISO images for the amd64, armv7, aarch64, powerpc64, powerpc64le, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-November/003549.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
+
+[[news]]
 date = "2025-10-25"
 title = "FreeBSD 15.0-BETA3 Available"
 description = "The third BETA build for the FreeBSD 15.0 release cycle is now available. ISO images for the amd64, armv7, aarch64, powerpc64, powerpc64le, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-October/003523.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
