events: Add Paris OSXP 2025

--- a/website/data/en/events/events2025.toml
+++ b/website/data/en/events/events2025.toml
@@ -70,3 +70,14 @@ country = "United States"
 city = "San Jose, CA"
 site = "NetApp Campus"
 description = "The FreeBSD Summit is an event held annually to bring the FreeBSD community together to learn, network, and drive FreeBSD use. Each year the event gathers FreeBSD users including: decision makers, software engineers, and individual contributors and users, to share best practices and successes in their use of FreeBSD. The FreeBSD Summit also provides the unique opportunity to discuss issues with the developer community in-person."
+
+[[events]]
+id ="osxp-paris-2025"
+name ="Open Source Experience Paris 2025"
+url = "https://www.opensource-experience.com/"
+startDate = "2025-12-10"
+endDate = "2025-12-11"
+country = "France"
+city = "Paris"
+site = "Cité des Sciences"
+description = "Open Source Experience (OSXP) is an event held annually in Paris and dedicated to enterprise Open Source IT solutions. The event also host booths for Open Source projects and initiatives. A FreeBSD booth will be organized by a group of contributors and users."
