event: fix toml

--- a/website/data/en/events/events2026.toml
+++ b/website/data/en/events/events2026.toml
@@ -2,7 +2,7 @@
 year = 2026
 
 [[events]]
-id = "fosdem-2026
+id = "fosdem-2026"
 name = "FOSDEM 2026"
 url = "https://fosdem.org/2026"
 startDate = "2026-01-31"
