--- a/website/data/en/events/events2026.toml
+++ b/website/data/en/events/events2026.toml
@@ -11,3 +11,15 @@ country = "Belgium"
 city = "Brussels"
 site = "ULB"
 description = "Every year, 8000+ hackers in free and open source software from all over the world gather at the event in Brussels. A <a href=\"https://fosdem.org/2026/schedule/track/bsd-illumos-bhyve-openzfs/\">BSD, illumos, OpenZFS, bhyve devroom</a> is organized for presentations covering BSD and illumos operating system family, OpenZFS and bhyve. The <a href=\"https://people.freebsd.org/~rodrigo/fosdem26/\">Call For Participation</a> is now available."
+
+[[events]]
+id = "asiabsdcon-2026"
+name = "AsiaBSDCon 2026"
+url = "https://2026.asiabsdcon.org/"
+startDate = "2026-03-19"
+endDate = "2026-03-22"
+countryCode = "TW"
+country = "Taiwan"
+city = "Taipei"
+site = "TBA"
+description = "AsiaBSDCon is a conference for users and developers on BSD based systems. The conference is for anyone developing, deploying and using systems based on FreeBSD, NetBSD, OpenBSD, DragonFlyBSD, Darwin and MacOS X. AsiaBSDCon is a technical conference and aims to collect the best technical papers and presentations available to ensure that the latest developments in our open source community are shared with the widest possible audience."
