press: Add recent OCI blog posts from the Foundation
Reviewed by:	jrm
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D53613

--- a/website/data/en/press/press.toml
+++ b/website/data/en/press/press.toml
@@ -1,5 +1,23 @@
 # Sort the entries by date
 [[press]]
+name = "FreeBSD Officially Supported in OCI Runtime Specification v1.3"
+url = "https://freebsdfoundation.org/blog/freebsd-officially-supported-in-oci-runtime-specification-v1-3/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-11-04"
+author = "FreeBSD Foundation"
+description = "FreeBSD has been included as an officially supported platform in version 1.3 of the Open Container Initiative (OCI) runtime specification"
+
+[[press]]
+name = "An introduction to OCI Containers on FreeBSD"
+url = "https://freebsdfoundation.org/blog/oci-containers-on-freebsd/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-10-31"
+author = "FreeBSD Foundation"
+description = "Run Containers on FreeBSD using Podman"
+
+[[press]]
 name = "FreeBSD Vendor Summit, Nov 6-7"
 url = "https://freebsdfoundation.org/blog/freebsd-vendor-summit-happening-next-week-november-6-7-2025/"
 siteName = "FreeBSD Foundation Blog"
