website: update ru/events
Reviewed by: andy
Differential Revision: https://reviews.freebsd.org/D53619

--- a/website/data/ru/events/events2025.toml
+++ b/website/data/ru/events/events2025.toml
@@ -70,3 +70,14 @@ country = "Соединенные Штаты"
 city = "Сан-Хосе, Калифорния"
 site = "Кампус NetApp"
 description = "Саммит FreeBSD является мероприятием, проводимым ежегодно с целью объединения сообщества FreeBSD для обмена опытом, установления контактов и продвижения использования FreeBSD. Каждый год это мероприятие собирает вместе тех, кто использует FreeBSD, в том числе лиц, принимающих решения, разработчиков, отдельных участников и обычных пользователей, чтобы поделиться лучшими практиками и успехами в использовании FreeBSD. Саммит FreeBSD также предоставляет уникальную возможность обсудить вопросы с сообществом разработчиков лично."
+
+[[events]]
+id = "osxp-paris-2025"
+name = "Open Source Experience Paris 2025"
+url = "https://www.opensource-experience.com/"
+startDate = "2025-12-10"
+endDate = "2025-12-11"
+country = "Франция"
+city = "Париж"
+site = "Cité des Sciences"
+description = "Open Source Experience (OSXP) - это ежегодное мероприятие, проводимое в Париже и посвящённое корпоративным IT-решениям с открытым исходным кодом. На мероприятии также будут представлены стенды проектов и инициатив с открытым исходным кодом. Стенд FreeBSD будет организован группой контрибьюторов и пользователей."
