website: update fix ru/news
fix commit 404c0ba4f1f5de3ffab72b81648b90c41b4b67f6

--- a/website/data/ru/news/news.toml
+++ b/website/data/ru/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-11-07"
+title = "Доступна версия FreeBSD 15.0-BETA5"
+description = "Пятая BETA-сборка для цикла выпуска FreeBSD 15.0 опубликована. Образы ISO для архитектур amd64, armv7, aarch64, powerpc64, powerpc64le и riscv64 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-November/003564.html\">доступны</a> на большинстве наших <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">зеркал FreeBSD</a>."
+
+[[news]]
 date = "2025-11-01"
 title = "Доступна версия FreeBSD 15.0-BETA4"
 description = "Четвертая BETA-сборка для цикла выпуска FreeBSD 15.0 опубликована. Образы ISO для архитектур amd64, armv7, aarch64, powerpc64, powerpc64le и riscv64 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-November/003549.html\">доступны</a> на большинстве наших <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">зеркал FreeBSD</a>."
@@ -2517,7 +2522,7 @@ description = "Мы рады поделиться ещё одной истори
 
 [[news]]
 date = "2013-01-07"
-description = "Новый коммиттер: <a href="mailto:ian@FreeBSD.org">Ian Lepore</a> (src)"
+description = "Новый коммиттер: <a href=\"mailto:ian@FreeBSD.org\">Ian Lepore</a> (src)"
 
 [[news]]
 date = "2012-12-31"
