--- a/website/data/ru/press/press.toml
+++ b/website/data/ru/press/press.toml
@@ -1,6 +1,33 @@
 # Sort the entries by date
 
 [[press]]
+name = "FreeBSD официально поддерживается в спецификации среды выполнения OCI v1.3"
+url = "https://freebsdfoundation.org/blog/freebsd-officially-supported-in-oci-runtime-specification-v1-3/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-11-04"
+author = "FreeBSD Foundation"
+description = "FreeBSD была включена в качестве официально поддерживаемой платформы в версию 1.3 спецификации среды выполнения Open Container Initiative (OCI)"
+
+[[press]]
+name = "Введение в контейнеры OCI на FreeBSD"
+url = "https://freebsdfoundation.org/blog/oci-containers-on-freebsd/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-10-31"
+author = "FreeBSD Foundation"
+description = "Запуск контейнеров на FreeBSD с помощью Podman"
+
+[[press]]
+name = "Саммит вендоров FreeBSD, 6-7 ноября"
+url = "https://freebsdfoundation.org/blog/freebsd-vendor-summit-happening-next-week-november-6-7-2025/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-10-28"
+author = "FreeBSD Foundation"
+description = "Саммит вендоров FreeBSD 2025 года пройдет 6-7 ноября в штаб-квартире NetApp в Сан-Хосе, Калифорния"
+
+[[press]]
 name = "Результаты опроса сообщества FreeBSD за 2025 год"
 url = "https://freebsdfoundation.org/insights-from-the-2025-freebsd-community-survey/"
 siteName = "FreeBSD Foundation"
