--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,9 +1,9 @@
 # Sort news by year, month and day
 
 [[news]]
-date = "2025-11-17=9"
+date = "2025-11-19"
 title = "FreeBSD 15.0-RC2 Available"
-description = "The first release candidate build for the FreeBSD 15.0 release cycle is now available. ISO images for the amd64, armv7, aarch64, powerpc64, powerpc64le, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-November/003585.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
+description = "The second release candidate build for the FreeBSD 15.0 release cycle is now available. ISO images for the amd64, armv7, aarch64, powerpc64, powerpc64le, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-November/003585.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
 
 [[news]]
 date = "2025-11-17"
