new committer (src): John Hall (jrhall)
Complete steps 1-4 for new committers from the committer's guide:

1. Add myself to doc/shared/authors.adoc
2. Add myself to doc/shared/contrib-committers.adoc
3. Add a news entry
4. Add my PGP key

Reviewed By:	imp (mentor)
Approved by:	imp (mentor)
Differential Revision: https://reviews.freebsd.org/D53933

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,10 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-12-15"
+description = "New committer: <a href=\"mailto:jrhall@FreeBSD.org\">John Hall</a> (src)"
+
+[[news]]
 date = "2025-12-03"
 description = "New committer: <a href=\"mailto:tpearson@FreeBSD.org\">Timothy Pearson</a> (src)"
 
