website/Makefile: Add 'ru' to ALL_LANGUAGES
To reflect reality, so that we can actually exclude that language
through DOC_LANG.

This saves 26s of build on a relatively fast machine of mine.

Sponsored by:   The FreeBSD Foundation

--- a/website/Makefile
+++ b/website/Makefile
@@ -16,7 +16,7 @@
 MAINTAINER=carlavilla@FreeBSD.org
 
 # List of all languages we have content for
-ALL_LANGUAGES=	en zh-tw
+ALL_LANGUAGES=	en ru zh-tw
 
 LOCALBASE?=	/usr/local
 
