--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-12-02"
+title = "FreeBSD 15.0-RELEASE Available"
+description = "<a href=\"https://www.FreeBSD.org/releases/15.0R/announce/\">FreeBSD 15.0-RELEASE</a> is now available. Please be sure to check the <a href=\"https://www.FreeBSD.org/releases/15.0R/relnotes/\">Release Notes</a> and <a href=\"https://www.FreeBSD.org/releases/15.0R/errata/\">Release Errata</a> before installation for any late-breaking news and/or issues with 15.0. More information about FreeBSD releases can be found on the <a href=\"https://www.FreeBSD.org/releases/\">Release Information</a> page."
+
+[[news]]
 date= "2025-11-30"
 title = "July-September 2025 Status Report"
 description = "The <a href=\"https://www.freebsd.org/status/report-2025-07-2025-09/\">July to September Status Report</a> is now available with 36 entries."
