--- a/website/data/ru/news/news.toml
+++ b/website/data/ru/news/news.toml
@@ -1,9 +1,12 @@
 # Sort news by year, month and day
 
+[[news]]
+date = "2025-12-03"
+description = "Новый коммиттер: <a href=\"mailto:tpearson@FreeBSD.org\">Timothy Pearson</a> (src)"
 
 [[news]]
 date = "2025-12-02"
-title = "Доступена версия FreeBSD 15.0-RELEASE"
+title = "Доступна версия FreeBSD 15.0-RELEASE"
 description = "Опубликован <a href=\"https://www.FreeBSD.org/ru/releases/15.0R/announce/\">FreeBSD 15.0-RELEASE</a>. Перед установкой обязательно ознакомьтесь с <a href=\"https://www.FreeBSD.org/ru/releases/15.0R/relnotes/\">Примечаниями к выпуску</a> и <a href=\"https://www.FreeBSD.org/ru/releases/15.0R/errata/\">списком известных ошибок выпуска</a> для получения последней информации и/или сведений о проблемах в версии 15.0. Дополнительная информация о выпусках FreeBSD доступна на странице <a href=\"https://www.FreeBSD.org/ru/releases/\">Информация о релизах</a>."
 
 [[news]]
@@ -166,7 +169,7 @@ description = "Новый коммиттер: <a href=\"mailto:vexeduxr@FreeBSD.
 
 [[news]]
 date = "2025-06-10"
-title = "Доступена версия FreeBSD 14.3-RELEASE"
+title = "Доступна версия FreeBSD 14.3-RELEASE"
 description = "Опубликован <a href=\"https://www.FreeBSD.org/releases/14.3R/announce/\">FreeBSD 14.3-RELEASE</a>. Перед установкой обязательно ознакомьтесь с <a href=\"https://www.FreeBSD.org/releases/14.3R/relnotes/\">примечаниями к выпуску</a> и <a href=\"https://www.FreeBSD.org/releases/14.3R/errata/\">списком известных ошибок выпуска</a> для получения последней информации и/или сведений о проблемах в версии 14.3. Дополнительная информация о выпусках FreeBSD доступна на странице <a href=\"https://www.FreeBSD.org/releases/\">Release Information</a>."
 
 [[news]]
@@ -222,7 +225,7 @@ description = "Новый коммиттер: <a href=\"mailto:kgalazka@FreeBSD.
 
 [[news]]
 date = "2025-03-11"
-title = "Доступена версия FreeBSD 13.5-RELEASE"
+title = "Доступна версия FreeBSD 13.5-RELEASE"
 description = "Опубликован <a href=\"https://www.FreeBSD.org/releases/13.5R/announce/\">FreeBSD 13.5-RELEASE</a>. Перед установкой обязательно ознакомьтесь с <a href=\"https://www.FreeBSD.org/releases/13.5R/relnotes/\">примечаниями к выпуску</a> и <a href=\"https://www.FreeBSD.org/releases/13.5R/errata/\">списком известных ошибок выпуска</a> для получения последней информации и/или сведений о проблемах в версии 13.5. Дополнительная информация о выпусках FreeBSD доступна на странице <a href=\"https://www.FreeBSD.org/releases/\">Release Information</a>."
 
 [[news]]
