website: Add The Register 15 review to press
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D54123

--- a/website/data/en/press/press.toml
+++ b/website/data/en/press/press.toml
@@ -1,5 +1,14 @@
 # Sort the entries by date
 [[press]]
+name = "The Register takes a look at FreeBSD 15"
+url = "https://www.theregister.com/2025/12/05/freebsd_15"
+siteName = "The Register"
+siteUrl = "https://theregister.com"
+date = "2025-12-05"
+author = "Liam Proven"
+description = "FreeBSD 15.0-RELEASE arrived this week, the latest release of the Unix world's leading alternative to Linux"
+
+[[press]]
 name = "FreeBSD Officially Supported in OCI Runtime Specification v1.3"
 url = "https://freebsdfoundation.org/blog/freebsd-officially-supported-in-oci-runtime-specification-v1-3/"
 siteName = "FreeBSD Foundation Blog"
