website: update ru/press
Reviewed by: marck
Differential Revision: https://reviews.freebsd.org/D54146

--- a/website/data/ru/press/press.toml
+++ b/website/data/ru/press/press.toml
@@ -1,4 +1,12 @@
 # Sort the entries by date
+[[press]]
+name = "Онлайн издание The Register обратило внимание на FreeBSD 15"
+url = "https://www.theregister.com/2025/12/05/freebsd_15"
+siteName = "The Register"
+siteUrl = "https://theregister.com"
+date = "2025-12-05"
+author = "Liam Proven"
+description = "На этой неделе вышел релиз FreeBSD 15.0-RELEASE, самый свежий релиз ведущей альтернативы Линуксу в мире Unix"
 
 [[press]]
 name = "FreeBSD официально поддерживается в спецификации среды выполнения OCI v1.3"
