--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,14 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-25:20.vmm"
+date = "2025-12-16"
+
+[[notices]]
+name = "FreeBSD-EN-25:19.zfs"
+date = "2025-12-16"
+
+[[notices]]
 name = "FreeBSD-EN-25:18.freebsd-update"
 date = "2025-09-30"
 
