website: RU - update ru/news
Translation of the latest security advisories
and the errata notices

--- a/website/data/ru/news/news.toml
+++ b/website/data/ru/news/news.toml
@@ -1,6 +1,34 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-12-16"
+title = "Исправлена критическая уязвимость в обработке IPv6-объявлений"
+description = "<a href=\"/security/advisories/FreeBSD-SA-25:12.rtsold.asc\">Бюллетень безопасности</a>. Обнаружена критическая уязвимость (CVE-2025-14558) в утилитах rtsol(8) и rtsold(8), обрабатывающих IPv6-объявления маршрутизаторов (Router Advertisements). Отсутствие проверки входных данных позволяет злоумышленнику, находящемуся в той же сети, внедрить и выполнить произвольные команды через поддельные опции DNS. Это приводит к удаленному выполнению кода (RCE) с правами суперпользователя. Затронуты все поддерживаемые версии FreeBSD (13, 14, 15), использующие автоматическую IPv6-конфигурацию (SLAAC) с принятием объявлений маршрутизаторов. Требуется немедленное обновление системы."
+
+[[news]]
+date = "2025-12-16"
+title = "Исправлена уязвимость в ipfw, вызывавшая отказ системы"
+description = "<a href=\"/security/advisories/FreeBSD-SA-25:11.ipfw.asc\">Бюллетень безопасности</a>. Обнаружена уязвимость (CVE-2025-14769) во встроенном сетевом экране ipfw в FreeBSD, приводящая к отказу в обслуживании (DoS). Ошибка возникает при использовании директивы tcp-setmss в правилах. При обработке специально сформированных пакетов от удаленного злоумышленника может произойти обращение к нулевому указателю, вызывающее аварию ядра и падение системы. Проблема затрагивает FreeBSD версий 13 и 14, но только те системы, где в конфигурации ipfw используется опция tcp-setmss. Рекомендуется срочное обновление."
+
+[[news]]
+date = "2025-12-16"
+title = "Исправлена регрессия PCI passthrough в гипервизоре bhyve"
+description = "<a href=\"/security/advisories/FreeBSD-EN-25:20.vmm.asc\">Уведомление об ошибке</a>. В коде модуля ядра vmm(4) обнаружена регрессия (побочный эффект обновления), нарушающая работу сквозного доступа к PCI-устройствам (PCI passthrough) в гипервизоре bhyve(8). Ошибка возникла после рефакторинга и затрагивает создание IOMMU-отображений памяти гостевой виртуальной машины. Это может привести к некорректной работе или невозможности передать физическое устройство (например, сетевую карту или GPU) напрямую в гостевую ОС. Проблема затрагивает FreeBSD 15.0. Для её устранения требуется обновление системы."
+
+[[news]]
+date = "2025-12-16"
+title = "Исправлена уязвимость ZFS: отказ системы из-за fsync для именованного канала"
+description = "<a href=\"/security/advisories/FreeBSD-EN-25:19.zfs.asc\">Уведомление об ошибке</a>. В подсистеме OpenZFS обнаружена уязвимость, позволяющая непривилегированному пользователю вызвать панику ядра. Проблема возникает при вызове системной функции fsync() для именованного канала (named pipe), что приводит к обращению к нулевому указателю. Это может быть использовано злоумышленником для атаки типа \"отказ в обслуживании\" или вызвано случайно некорректной программой. Затронута система FreeBSD 15.0 с использованием ZFS. Рекомендуется незамедлительное обновление."
+
+[[news]]
+date = "2025-12-16"
+description = "Новый коммиттер: <a href=\"mailto:js@FreeBSD.org\">Johan Söllvander</a> (src)"
+
+[[news]]
+date = "2025-12-15"
+description = "Новый коммиттер: <a href=\"mailto:jrhall@FreeBSD.org\">John Hall</a> (src)"
+
+[[news]]
 date = "2025-12-03"
 description = "Новый коммиттер: <a href=\"mailto:tpearson@FreeBSD.org\">Timothy Pearson</a> (src)"
 
