events: Add site information of AsiaBSDCon 2206

--- a/website/data/en/events/events2026.toml
+++ b/website/data/en/events/events2026.toml
@@ -21,5 +21,5 @@ endDate = "2026-03-22"
 countryCode = "TW"
 country = "Taiwan"
 city = "Taipei"
-site = "TBA"
+site = "National Taiwan Normal University (NTNU)"
 description = "AsiaBSDCon is a conference for users and developers on BSD based systems. The conference is for anyone developing, deploying and using systems based on FreeBSD, NetBSD, OpenBSD, DragonFlyBSD, Darwin and MacOS X. AsiaBSDCon is a technical conference and aims to collect the best technical papers and presentations available to ensure that the latest developments in our open source community are shared with the widest possible audience."
