--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,10 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2026-01-10"
+description = "New committer: <a href=\"mailto:pouria@FreeBSD.org\">Pouria Mousavizadeh Tehrani</a> (src)"
+
+[[news]]
 date = "2025-12-16"
 description = "New committer: <a href=\"mailto:js@FreeBSD.org\">Johan Söllvander</a> (src)"
 
