website/ru: Update data/news/news.toml
Sync to EN 8a270ee683c8cd5befe768c9fe8f5a34b60e4cad
Add FRDP footer

--- a/website/data/ru/news/news.toml
+++ b/website/data/ru/news/news.toml
@@ -1,4 +1,8 @@
-# Sort news by year, month and day
+# Новости сортируются по году, месяцу и дню
+
+[[news]]
+date = "2026-01-10"
+description = "Новый коммиттер: <a href=\"mailto:pouria@FreeBSD.org\">Pouria Mousavizadeh Tehrani</a> (src)"
 
 [[news]]
 date = "2025-12-16"
@@ -3392,3 +3396,9 @@ description = "Новый коммиттер: <a href=\"mailto:avilla@FreeBSD.or
 date = "2010-01-17"
 title = "Отчёт о состоянии работ за октябрь-декабрь 2009 года"
 description = "Отчёт о состоянии работ за октябрь-декабрь 2009 года <a href=\"https://www.freebsd.org/news/status/report-2009-10-2009-12.html\">теперь доступен</a> с 38 записями."
+
+#
+# The FreeBSD Russian Documentation Project
+#
+# Original EN revision (14.01.2026): 8a270ee683c8cd5befe768c9fe8f5a34b60e4cad
+#
