new committer (src): Siva Mahadevan (siva)
Complete steps 1-4 for new committers from the guide.

Reviewed by:		lwhsu
Approved by:		lwhsu (mentor)
Differential Revision:	https://reviews.freebsd.org/D54735

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -5,6 +5,10 @@ date = "2026-01-10"
 description = "New committer: <a href=\"mailto:pouria@FreeBSD.org\">Pouria Mousavizadeh Tehrani</a> (src)"
 
 [[news]]
+date = "2026-01-09"
+description = "New committer: <a href=\"mailto:siva@FreeBSD.org\">Siva Mahadevan</a> (src)"
+
+[[news]]
 date = "2025-12-16"
 description = "New committer: <a href=\"mailto:js@FreeBSD.org\">Johan Söllvander</a> (src)"
 
