Add EN-26:01 through EN-26:03, SA-26:01, and SA-26:02.
Approved by:    so

--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,18 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-26:03.vm"
+date = "2026-01-27"
+
+[[notices]]
+name = "FreeBSD-EN-26:02.arm64"
+date = "2026-01-27"
+
+[[notices]]
+name = "FreeBSD-EN-26:01.devinfo"
+date = "2026-01-27"
+
+[[notices]]
 name = "FreeBSD-EN-25:20.vmm"
 date = "2025-12-16"
 
