Add BSD-NL 2026, announced today

--- a/website/data/en/events/events2026.toml
+++ b/website/data/en/events/events2026.toml
@@ -23,3 +23,15 @@ country = "Taiwan"
 city = "Taipei"
 site = "National Taiwan Normal University (NTNU)"
 description = "AsiaBSDCon is a conference for users and developers on BSD based systems. The conference is for anyone developing, deploying and using systems based on FreeBSD, NetBSD, OpenBSD, DragonFlyBSD, Darwin and MacOS X. AsiaBSDCon is a technical conference and aims to collect the best technical papers and presentations available to ensure that the latest developments in our open source community are shared with the widest possible audience."
+
+[[events]]
+id = "bsdnl-early-2026"
+name = "BSD-NL 2026"
+url = "https://bsdnl.nl/"
+startDate = "2026-05-09"
+endDate = "2026-05-09"
+countryCode = "NL"
+country = "The Netherlands"
+city = "Utrecht"
+site = "Brouwerij Maximus"
+description = "BSD-NL is all about bringing like-minded people together, whether you’re a hobbyist, enthusiast, expert, developer, network or system administrator. Everyone is welcome!  Meeting once, or twice a year, at EuroBSDCon, BSDCan or AsiaBSDCon isn’t enough!  So we decided to start BSD-NL, The BSD Community in The Netherlands.  For all your *BSD needs, either it be FreeBSD, OpenBSD, NetBSD, DragonFlyBSD, HardenedBSD, SecBSD or any other *BSD."
