website: update ru/news
(14.4-BETA1 announcement)

--- a/website/data/ru/news/news.toml
+++ b/website/data/ru/news/news.toml
@@ -1,6 +1,11 @@
 # Новости сортируются по году, месяцу и дню
 
 [[news]]
+date = "2026-02-08"
+title = "Доступна версия FreeBSD 14.4-BETA1"
+description = "Опубликована первая BETA-сборка для цикла выпуска FreeBSD 14.4. Образы ISO для архитектур amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv7, aarch64 и riscv64 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2026-February/003844.html\">доступны</a> на большинстве наших <a href=\"https://docs.freebsd.org/ru/books/handbook/mirrors/#mirrors-ftp\">зеркал FreeBSD</a>."
+
+[[news]]
 date = "2026-01-10"
 description = "Новый коммиттер: <a href=\"mailto:pouria@FreeBSD.org\">Pouria Mousavizadeh Tehrani</a> (src)"
 
