Add EN-26:04 and SA-26:03.
Approved by:	so

--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-26:04.arm64"
+date = "2026-02-10"
+
+[[notices]]
 name = "FreeBSD-EN-26:03.vm"
 date = "2026-01-27"
 
