Add BSDCan 2026 to the Upcoming Events section

--- a/website/data/en/events/events2026.toml
+++ b/website/data/en/events/events2026.toml
@@ -35,3 +35,15 @@ country = "The Netherlands"
 city = "Utrecht"
 site = "Brouwerij Maximus"
 description = "BSD-NL is all about bringing like-minded people together, whether you’re a hobbyist, enthusiast, expert, developer, network or system administrator. Everyone is welcome!  Meeting once, or twice a year, at EuroBSDCon, BSDCan or AsiaBSDCon isn’t enough!  So we decided to start BSD-NL, The BSD Community in The Netherlands.  For all your *BSD needs, either it be FreeBSD, OpenBSD, NetBSD, DragonFlyBSD, HardenedBSD, SecBSD or any other *BSD."
+
+[[events]]
+id = "bsdcan-2026"
+name = "BSDCan 2026"
+url = "https://www.bsdcan.org/2026/"
+startDate = "2026-06-17"
+endDate = "2026-06-20"
+countryCode = "CA"
+country = "Canada"
+city = "Ottawa"
+site = "University of Ottawa"
+description = "BSDCan is the definitive BSD event in North America and welcomes BSD Unix developers, administrators, and users of every level of experience. Get direct access to the friendly people who make the Internet run smoothly and develop your favorite modern products and services. Whether you are shy or outgoing, we welcome you!"
