Add EuroBSDCon 2026 to the events page

--- a/website/data/en/events/events2026.toml
+++ b/website/data/en/events/events2026.toml
@@ -47,3 +47,15 @@ country = "Canada"
 city = "Ottawa"
 site = "University of Ottawa"
 description = "BSDCan is the definitive BSD event in North America and welcomes BSD Unix developers, administrators, and users of every level of experience. Get direct access to the friendly people who make the Internet run smoothly and develop your favorite modern products and services. Whether you are shy or outgoing, we welcome you!"
+
+[[events]]
+id = "eurobsdcon-2026"
+name = "EuroBSDCon 2026"
+url = "https://2026.eurobsdcon.org"
+startDate = "2026-09-09"
+endDate = "2026-09-13"
+countryCode = "BE"
+country = "Belgium"
+city = "Brussels"
+site = "VUB Main Campus in Etterbeek"
+description = "EuroBSDCon is the international annual technical conference held in a different European country each year. It focuses on gathering users and developers working on and with 4.4BSD (Berkeley Software Distribution) based operating systems family and related projects."
