website: update ru/news - SA and EN translated
Reviewed by: andy
Differential Revision: https://reviews.freebsd.org/D55331

--- a/website/data/ru/news/news.toml
+++ b/website/data/ru/news/news.toml
@@ -6,9 +6,46 @@ title = "Доступна версия FreeBSD 14.4-BETA2"
 description = "Опубликована вторая BETA-сборка для цикла выпуска FreeBSD 14.4. Образы ISO для архитектур amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv7, aarch64 и riscv64 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2026-February/003848.html\">доступны</a> на большинстве наших <a href=\"https://docs.freebsd.org/ru/books/handbook/mirrors/#mirrors-ftp\">зеркал FreeBSD</a>."
 
 [[news]]
+date = "2026-02-10"
+title = "Устранена утечка сокетов в blocklistd, позволявшая отключить защиту (CVE-2026-2261)"
+description = "<a href=\"/security/advisories/FreeBSD-SA-26:03.blocklistd.asc\">Бюллетень безопасности</a>. Обнаружена уязвимость в службе blocklistd(8) в FreeBSD 15.0. Из-за программной ошибки демон допускает утечку файловых дескрипторов сокетов при обработке событий (например, неудачных входов по SSH). По мере накопления утечек blocklistd сначала перестаёт блокировать и разблокировать IP-адреса, а затем полностью прекращает приём новых событий. Атакующий может намеренно сгенерировать большое число событий с разных адресов и фактически вывести механизм блокировок из строя. Рекомендуется срочно установить обновления безопасности."
+
+[[news]]
+date = "2026-02-10"
+title = "Исправлена ошибка аварийного прекращения работы ядра при создании файла core на arm64"
+description = "<a href=\"/security/advisories/FreeBSD-EN-26:04.arm64.asc\">Уведомление об ошибке</a>. В FreeBSD 15.0 на системах arm64 с включённой поддержкой SVE возможно аварийное прекращение работы ядра при создании core-файла процесса. Ошибка связана с некорректной проверкой и сохранением SVE-регистров в ELF-информации образа процесса. Проблема не затрагивает другие архитектуры и arm64 без SVE. Обходного решения нет. Рекомендуется установить обновление (15.0-RELEASE-p3) или применить исправление и пересобрать ядро."
+
+[[news]]
 date = "2026-02-08"
 title = "Доступна версия FreeBSD 14.4-BETA1"
 description = "Опубликована первая BETA-сборка для цикла выпуска FreeBSD 14.4. Образы ISO для архитектур amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv7, aarch64 и riscv64 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2026-February/003844.html\">доступны</a> на большинстве наших <a href=\"https://docs.freebsd.org/ru/books/handbook/mirrors/#mirrors-ftp\">зеркал FreeBSD</a>."
+
+[[news]]
+date = "2026-01-27"
+title = "Устранена возможность выхода из jail через nullfs (CVE-2025-15547)"
+description = "<a href=\"/security/advisories/FreeBSD-SA-26:02.jail.asc\">Бюллетень безопасности</a>. Обнаружена уязвимость, позволяющей привилегированному пользователю внутри jail выйти за пределы изолированной среды. Проблема связана с особенностями проверки путей в ядре при использовании nullfs и включённой опции allow.mount.nullfs. В такой конфигурации пользователь с правами root внутри jail может получить доступ ко всей файловой системе хоста или родительского jail. Уязвимость затрагивает FreeBSD 14.3 и 13.5. Решение — установка обновлений безопасности; системы без allow.mount.nullfs не подвержены проблеме."
+
+[[news]]
+date = "2026-01-27"
+title = "Исправлена ошибка в обработчике page fault, не обнулявшем память"
+description = "<a href=\"/security/advisories/FreeBSD-EN-26:03.vm.asc\">Уведомление об ошибке</a>. Во всех поддерживаемых версиях FreeBSD при использовании mmap(2) с флагом `MAP_ANON` в ряде случаев физические страницы, выделяемые при обработке событий page fault, могли возвращаться без обязательного обнуления. Это нарушает ожидаемое поведение системы и приводило к сбоям приложений. Обходного решения нет. Рекомендуется установить обновления или пересобрать ядро с патчем."
+
+[[news]]
+date = "2026-01-27"
+title = "Устранён сбой на arm64 из-за неверного выравнивания SVE"
+description = "<a href=\"/security/advisories/FreeBSD-EN-26:02.arm64.asc\">Уведомление об ошибке</a>. В FreeBSD 15.0 и 14.3 на системах arm64 с поддержкой SVE обнаружена проблема выравнивания контекста регистров при обработке сигналов. Ядро некорректно сохраняло SVE-регистры в пользовательский стек, из-за чего последующее восстановление контекста могло завершаться ошибкой. В результате процессы могли неожиданно завершаться после обработки сигнала. Уязвимость не затрагивает другие архитектуры и arm64 без SVE. Рекомендуется установить обновления с исправлением."
+
+[[news]]
+date = "2026-01-27"
+title = "Устранена ошибка: некорректный формат выдачи результата работы devinfo на FreeBSD 15.0"
+description = "<a href=\"/security/advisories/FreeBSD-EN-26:01.devinfo.asc\">Уведомление об ошибке</a>. Обнаружена ошибка в FreeBSD 15.0: при переводе утилиты devinfo(8) на библиотеку libxo был непреднамеренно изменён формат выдачи результата. Это нарушило работу сторонних инструментов, анализирующих вывод команды, включая порт sysutils/intel-nvmupdate. Нарушения безопасности нет, однако возможны сбои в автоматизированных сценариях и служебных утилитах. Обходного решения не предусмотрено. Рекомендуется установить обновление системы до выхода версии с исправлением."
+
+
+[[news]]
+date = "2026-01-27"
+title = "Устранён ряд критических уязвимостей в OpenSSL"
+description = "<a href=\"/security/advisories/FreeBSD-SA-26:01.openssl.asc\">Бюллетень безопасности</a>. Обнаружены множественные уязвимости в библиотеке OpenSSL. Проблемы затрагивают все поддерживаемые ветки FreeBSD (13.5, 14.3 и 15.0) и включают переполнения буфера, выход за границы памяти, ошибки проверки ASN.1, обращение к адресу NULL и избыточное выделение памяти. В ряде случаев возможны утечки данных или выполнение произвольного кода. Обходных решений нет. Рекомендуется срочно обновить систему через freebsd-update или установить исправления из исходных текстов и перезагрузить сервер"
+
 
 [[news]]
 date = "2026-01-10"
